# PowerPixelsPipeline

./: .gitignore  IB_README.md  README.md  pyproject.toml  requirements.txt
config/: analyze_settings.json  bombcell_params.json  dummy_settings.json  force_qc_settings.json  force_settings.json  ibl_qc_params.json  settings.json  test_settings.json  unitrefine_params.json
config/sorter_params/: kilosort2_5_params.json  kilosort3_params.json  kilosort4_params.json  pykilosort_params.json
config/wiring/: nidq.wiring.json
scripts/: analyze_lcp.py  analyze_sorted_spikes.py  analyze_threshold_spikes.py  analyze_threshold_spikes2.py  prepare_sessions.py  run_pipeline_openephys.py  run_pipeline_spikeglx.py
src/powerpixels/: __init__.py  generate_config_files.py  pipeline.py  utils.py
