[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "powerpixels"
version = "0.2.0"
requires-python = ">=3.11"
dependencies = [
     "spikeinterface[full,widgets]",
     "docker",
     "ibllib",
     "ipympl",
     "jupyter",
     "spikeinterface-gui",
     "huggingface-hub",
     "skops",
     "scikit-learn==1.5.2",
     "bombcell",
     "kilosort",
     "neuroconv==0.8.3",
     "lxml"
]

[tool.setuptools]
package-dir = {"" = "src"}

[project.scripts]
powerpixels-setup = "powerpixels.generate_config_files:main"

